--- a/servidor/pagina/templates/login.html
+++ b/servidor/pagina/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>ARM sign</title>
+    <title>ARM - Inicia sesión </title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
 
@@ -26,7 +26,7 @@
       }
 
       @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
+        .bd-placeholder-img-lg {|
           font-size: 3.5rem;
         }
       }
@@ -39,16 +39,18 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form>
+  <form role="form" action="./" method="POST">{%csrf_token%}
+    
     <img class="mb-4" src="{%static 'assets/brand/DpXyBL2XcAA5DNa.svg'%}" alt="" width="72" height="57">
+   
     <h1 class="h3 mb-3 fw-normal">Porfavor inicia sesión</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <input  class="form-control" id="floatingInput" placeholder="name@example.com" name="usuario">
       <label for="floatingInput">Dirección de correo</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="contra">
       <label for="floatingPassword">Contraseña</label>
     </div>
 
@@ -59,6 +61,7 @@
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Iniciar sesión</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2021–2021</p>
+
   </form>
 </main>
 
