--- a/servidor/pagina/templates/login.html
+++ b/servidor/pagina/templates/login.html
@@ -42,7 +42,7 @@
 <main class="form-signin">
   <form role="form" action="./" method="POST">{%csrf_token%}
     
-    <img class="mb-4" src="{%static 'assets/brand/DpXyBL2XcAA5DNa.svg'%}" alt="" width="72" height="57">
+    <img class="mb-4" src="{%static 'assets/brand/ARMLOGO.png'%}" alt="" width="200" height="200">
    
     <h1 class="h3 mb-3 fw-normal">Porfavor inicia sesión</h1>
 
