--- a/servidor/pagina/templates/index.html
+++ b/servidor/pagina/templates/index.html
@@ -37,78 +37,20 @@
                         <span>Dashboard</span>
                     </a>
                     
+                    
+                </li>
+
+                <li class="sidebar-item ">
+                    <a href="table-datatable.html" class="sidebar-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-plus"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg> 
+                        <span>Datatable</span>
+                    </a>
                 </li>
 
             
             
             
-                <li class="sidebar-item  has-sub">
-                    <a href="#" class='sidebar-link'>
-                        <i data-feather="triangle" width="20"></i> 
-                        <span>Components</span>
-                    </a>
-                    
-                    <ul class="submenu ">
-                        
-                        <li>
-                            <a href="component-alert.html">Alert</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-badge.html">Badge</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-breadcrumb.html">Breadcrumb</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-buttons.html">Buttons</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-card.html">Card</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-carousel.html">Carousel</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-dropdowns.html">Dropdowns</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-list-group.html">List Group</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-modal.html">Modal</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-navs.html">Navs</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-pagination.html">Pagination</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-progress.html">Progress</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-spinners.html">Spinners</a>
-                        </li>
-                        
-                        <li>
-                            <a href="component-tooltips.html">Tooltips</a>
-                        </li>
-                        
-                    </ul>
-                    
-                </li>
+                
 
             
             
@@ -176,7 +118,7 @@
                         <li class="dropdown">
                             <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
                                 <div class="avatar mr-1">
-                                    <img src="{% static 'assets/images/avatar/avatar-s-1.png'%}" alt="" srcset="">
+                                    <img src="{% static 'assets/images/avatar/avatar-1.jpg'%}" alt="" srcset="">
                                 </div>
                                 <div class="d-none d-md-block d-lg-inline-block">Hola, {{nombre_completo}}</div>
                             </a>
