--- a/servidor/pagina/static/signin.css
+++ b/servidor/pagina/static/signin.css
@@ -8,7 +8,8 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-image: url("../static/assets/images/wallpapersden.com_76492-5120x2880.jpg");
+  background-size: 100rem;
 }
 
 .form-signin {
