--- a/servidor/pagina/templates/table-datatable.html
+++ b/servidor/pagina/templates/table-datatable.html
@@ -161,11 +161,13 @@
                                 <thead>
                                     <tr><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Nombre</a></th><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Codigo</a></th><th data-sortable="" style="width: 20.8988%;"><a href="#" class="dataTable-sorter">Precio/compra</a></th><th data-sortable="" style="width: 26.7434%;"><a href="#" class="dataTable-sorter">Precio/Venta</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">categoria</a></tr>
                                 </thead>
-                                <tbody><tr><td>Graiden</td><td>vehicula.aliquet@semconsequat.co.uk</td><td>076 4820 8838</td><td>Offenburg</td><td>
-                                            <span class="badge bg-success">Active</span>
-                                        </td></tr><tr><td>Dale</td><td>fringilla.euismod.enim@quam.ca</td><td>0500 527693</td><td>New Quay</td><td>
+                                <tbody><tr><td>NombreProducto</td><td>12345</td><td>5000</td><td>8500</td><td>Limpieza</td><td>
+                                    <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                                        Editar
+                                      </a>
+                                </td>
                                             
-                            </table></div><div class="dataTable-bottom"><div class="dataTable-info">Showing 1 to 10 of 26 entries</div><ul class="pagination pagination-primary float-right dataTable-pagination"><li class="page-item pager"><a href="#" class="page-link" data-page="1">‹</a></li><li class="page-item active"><a href="#" class="page-link" data-page="1">1</a></li><li class="page-item"><a href="#" class="page-link" data-page="2">2</a></li><li class="page-item"><a href="#" class="page-link" data-page="3">3</a></li><li class="page-item pager"><a href="#" class="page-link" data-page="2">›</a></li></ul></div></div>
+                                      
                         </div>
                     </div>
             
