--- a/servidor/pagina/templates/table-datatable.html
+++ b/servidor/pagina/templates/table-datatable.html
@@ -1,73 +1,8 @@
+{%extends 'Menu.html'%}
 {%  load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datatable - ARM Admin Datatable</title>
-    
-    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css'%}">
-    
-    <link rel="stylesheet" href="{% static 'assets/vendors/chartjs/Chart.min.css'%}">
-
-    <link rel="stylesheet" href="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.css'%}">
-    <link rel="stylesheet" href="{% static 'assets/css/app.css'%}">
-    <link rel="shortcut icon" href="{% static 'assets/images/ARMLOGO.png'%}" type="image/x-icon">
-</head>
-<body>
-    <div id="app">
-        <div id="sidebar" class='active'>
-            <div class="sidebar-wrapper active">
-    <div class="sidebar-header">
-        <center>
-        <img src="{% static 'assets/images/ARMLOGO.png'%}" alt="" srcset="">
-        </center>
-    </div>
-    <div class="sidebar-menu">
-        <ul class="menu">
-            
-            
-                <li class='sidebar-title'>Mi Menú </li>
-            
-            
-            
-                <li class="sidebar-item active ">
-                    <a href="index.html" class='sidebar-link'>
-                        <i data-feather="home" width="20"></i> 
-                        <span>Dashboard</span>
-                    </a>
-                    
-                    
-                </li>
-
-                <li class="sidebar-item ">
-                    <a href="table-datatable.html" class="sidebar-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-plus"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg> 
-                        <span>Buscar Producto</span>
-                    </a>
-                </li>
-
-            
-            
-            
-                
+{%block cuerpo%}
 
 
-            
-            
-            
-               
-                    
-                 
-            
-            
-            
-               
-            
-            
-         
-        </ul>
-    </div>
     <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
 </div>
         </div>
@@ -157,7 +92,7 @@
                            Buscar por categoria de producto
                         </div>
                         <div class="card-body">
-                            <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns"><div class="dataTable-top"><div class="dataTable-dropdown"><select class="dataTable-selector form-select"><option value="5">5</option><option value="10" selected="">10</option><option value="15">15</option><option value="20">20</option><option value="25">25</option></select><label>entries per page</label></div><div class="dataTable-search"><input class="dataTable-input" placeholder="Buscar..." type="text"></div></div><div class="dataTable-container"><table class="table table-striped dataTable-table" id="table1">
+                            <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns"><div class="dataTable-top"><div class="dataTable-dropdown"><select class="dataTable-selector form-select"><option value="5">5</option><option value="10" selected="">10</option><option value="15">15</option><option value="20">20</option><option value="25">25</option></select><label>Buscar por nombre</label></div><div class="dataTable-search"><input class="dataTable-input" placeholder="Buscar..." type="text"></div></div><div class="dataTable-container"><table class="table table-striped dataTable-table" id="table1">
                                 <thead>
                                     <tr><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Nombre</a></th><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Codigo</a></th><th data-sortable="" style="width: 20.8988%;"><a href="#" class="dataTable-sorter">Precio/compra</a></th><th data-sortable="" style="width: 26.7434%;"><a href="#" class="dataTable-sorter">Precio/Venta</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">categoria</a></tr>
                                 </thead>
@@ -194,3 +129,4 @@
 <script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
 
 <script src="{% static 'assets/js/main.js'%}"></script>
+{%endblock%}
