--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1513,3 +1513,20 @@ border-radius : 50%;
 .bg-gray-700 {
   background-color: #4a5568 !important;
 }
+
+footer div{
+
+  display: flex;
+  justify-content: end;
+}
+
+.agregar_producto{
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+}
+.agregar_producto:hover {
+  background-color: #008CBA;
+  color: white;
+}
