--- a/servidor/pagina/templates/table-datatable.html
+++ b/servidor/pagina/templates/table-datatable.html
@@ -94,14 +94,26 @@
                         <div class="card-body">
                             <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns"><div class="dataTable-top"><div class="dataTable-dropdown"><select class="dataTable-selector form-select"><option value="5">5</option><option value="10" selected="">10</option><option value="15">15</option><option value="20">20</option><option value="25">25</option></select><label>Buscar por nombre</label></div><div class="dataTable-search"><input class="dataTable-input" placeholder="Buscar..." type="text"></div></div><div class="dataTable-container"><table class="table table-striped dataTable-table" id="table1">
                                 <thead>
-                                    <tr><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Nombre</a></th><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Codigo</a></th><th data-sortable="" style="width: 20.8988%;"><a href="#" class="dataTable-sorter">Precio/compra</a></th><th data-sortable="" style="width: 26.7434%;"><a href="#" class="dataTable-sorter">Precio/Venta</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">categoria</a></tr>
+                                    <tr><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Nombre</a></th><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Codigo</a></th><th data-sortable="" style="width: 20.8988%;"><a href="#" class="dataTable-sorter">Precio/compra</a></th><th data-sortable="" style="width: 26.7434%;"><a href="#" class="dataTable-sorter">Precio/Venta</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">categoria</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">cantidad</a></tr>
                                 </thead>
-                                <tbody><tr><td>NombreProducto</td><td>12345</td><td>5000</td><td>8500</td><td>Limpieza</td><td>
+                                <tbody>
+                                    {%for lista in listatabla%}
+                                    <tr>
+                                    
+                                    <td>{{lista.nombre_productos}}</td>
+                                    <td>{{lista.codigo_productos}}</td>
+                                    <td>{{lista.preciocompra_productos}}</td>
+                                    <td>{{lista.precioventa_productos}}</td>
+                                    <td>{{lista.categoria_productos}}</td>
+                                    <td>{{lista.cantidad_productos}}</td>
+                                    
+                                
                                     <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                                         Editar
                                       </a>
                                 </td>
-                                            
+                                </tr>
+                                {%endfor%}                                            
                                       
                         </div>
                     </div>
@@ -111,6 +123,9 @@
 
             <footer>
                 <div class="footer clearfix mb-0 text-muted">
+                 <button class="agregar_producto">
+                     Añadir Producto
+                 </button>
                     
                     
                 </div>
