--- a/servidor/pagina/templates/login.html
+++ b/servidor/pagina/templates/login.html
@@ -53,7 +53,7 @@
 
     <div class="form-floating">
       <input  class="form-control" id="floatingInput" placeholder="name@example.com" name="usuario">
-      <label for="floatingInput">Dirección de correo</label>
+      <label for="floatingInput">Nombre de usuario</label>
     </div>
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="contra">
