--- a/servidor/pagina/templates/Menu.html
+++ b/servidor/pagina/templates/Menu.html
@@ -31,7 +31,7 @@
             
             
             
-                <li class="sidebar-item active ">
+                <li class="sidebar-item ">
                     <a href="index.html" class='sidebar-link'>
                         <i data-feather="home" width="20"></i> 
                         <span>Dashboard</span>
@@ -46,6 +46,7 @@
                         <span>Producto</span>
                     </a>
                 </li>
+
 
             
             
@@ -67,5 +68,6 @@
          
         </ul>
     </div>
+        
     {%block cuerpo%}
     {%endblock%}
