--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1531,6 +1531,17 @@ footer div{
   color: white;
 }
 
+.guardar-producto{
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+}
+.guardar-producto:hover {
+  background-color: #008CBA;
+  color: white;
+}
+
 .forma{
   width: 100%;
   max-width: 600px;
