--- a/servidor/pagina/templates/editproducto.html
+++ b/servidor/pagina/templates/editproducto.html
@@ -1,19 +1,95 @@
 {%extends 'Menu.html'%}
-
 {% load static %}
 {%block cuerpo%}
 <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
 </div>
         </div>
-  <form action="{% url 'editproducto' %}">
+        <div id="main">
+          <nav class="navbar navbar-header navbar-expand navbar-light">
+              <a class="sidebar-toggler" href="#"><span class="navbar-toggler-icon"></span></a>
+              <button class="btn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav d-flex align-items-center navbar-light ml-auto">
+                      <li class="dropdown nav-icon">
+                          <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
+                              <div class="d-lg-inline-block">
+                                  <i data-feather="bell"></i>
+                              </div>
+                          </a>
+                          <div class="dropdown-menu dropdown-menu-right dropdown-menu-large">
+                              <h6 class='py-2 px-4'>Notifications</h6>
+                              <ul class="list-group rounded-none">
+                                  <li class="list-group-item border-0 align-items-start">
+                                      <div class="avatar bg-success mr-3">
+                                          <span class="avatar-content"><i data-feather="shopping-cart"></i></span>
+                                      </div>
+                                      <div>
+                                          <h6 class='text-bold'>New Order</h6>
+                                          <p class='text-xs'>
+                                              An order made by Ahmad Saugi for product Samsung Galaxy S69
+                                          </p>
+                                      </div>
+                                  </li>
+                              </ul>
+                          </div>
+                      </li>
+                      <li class="dropdown nav-icon mr-2">
+                          <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
+                              <div class="d-lg-inline-block">
+                                  <i data-feather="mail"></i>
+                              </div>
+                          </a>
+                          <div class="dropdown-menu dropdown-menu-right">
+                              <a class="dropdown-item" href="#"><i data-feather="user"></i> cuenta</a>
+                              <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
+                          </div>
+                      </li>
+                      <li class="dropdown">
+                          <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
+                              <div class="avatar mr-1">
+                                  <img src="{% static 'assets/images/avatar/avatar-1.jpg'%}" alt="" srcset="">
+                              </div>
+                              <div class="d-none d-md-block d-lg-inline-block">Hola, {{nombre_completo}}</div>
+                          </a>
+                          <div class="dropdown-menu dropdown-menu-right">
+                              <a class="dropdown-item" href="#"><i data-feather="user"></i> cuenta</a>
+                              <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
+                          </div>
+                      </li>
+                  </ul>
+              </div>
+          </nav>   
+    <form action="{% url 'editproducto' %}">
     <div class="forma">
-      <label for="ingresarnombre">Example label</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+      <label for="ingresar-nombre">Añadir nombre del producto</label>
+      <input type="text" class="form-control" id="formGroupExampleInput1" >
    
     
-      <label for="formGroupExampleInput2">Another label</label>
-      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+      <label for="ingresar-codigo">Añadir codigo del producto</label>
+      <input type="text" class="form-control" id="formGroupExampleInput2" >
+
+      <label for="ingresar-precio-compra">Añadir precio de compra</label>
+      <input type="text" class="form-control" id="formGroupExampleInput3" >
       
+      <label for="ingresar-precio-compra">Añadir precio de venta</label>
+      <input type="text" class="form-control" id="formGroupExampleInput4" >
+
+      <label for="ingresar-cantidad">Añadir cantidad</label>
+      <input type="text" class="form-control" id="formGroupExampleInput5" >
+      <div class="card-header">
+        seleccionar categoria de producto
+     </div>
+      <select class="dataTable-selector form-select"><option value="5">5</option><option value="10" selected="">10</option><option value="15">15</option><option value="20">20</option><option value="25">25</option></select>
+
+
+
       </div>
       <footer>
         <div class="footer clearfix mb-0 text-muted">
@@ -26,5 +102,15 @@
         </div>
     </footer>
   </form>
+</body>
+</html>
+<script src="{% static 'assets/js/feather-icons/feather.min.js'%}"></script>
+<script src="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js'%}"></script>
+<script src="{% static 'assets/js/app.js'%}"></script>
+<script src="{% static 'assets/vendors/chartjs/Chart.min.js'%}"></script>
+<script src="{% static 'assets/vendors/apexcharts/apexcharts.min.js'%}"></script>
+<script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
+
+<script src="{% static 'assets/js/main.js'%}"></script>
 {%endblock%}
  
