Cargar cliente and productos

--- a/servidor/pagina/templates/Menu.html
+++ b/servidor/pagina/templates/Menu.html
@@ -35,7 +35,7 @@
 
 
                         <li class="sidebar-item" id="sidebar-item1">
-                            <a href="cargar_cliente.html" class='sidebar-link'>
+                            <a href="{% url 'editclientes' 0 %}" class='sidebar-link'>
                                 <img src="{% static 'assets/images/atencion-al-cliente.png'%}" width="20" height="24"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-plus">
@@ -50,7 +50,7 @@
                         
 
                         <li class="sidebar-item" id="sidebar-item2">
-                            <a href="buscar" class="sidebar-link">
+                            <a href="{% url 'buscar'%}" class="sidebar-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-file-plus">
@@ -65,7 +65,7 @@
 
                     </li>
                     <li class="sidebar-item" id="sidebar-item3">
-                        <a href="index.html" class='sidebar-link'>
+                        <a href="index.html"class='sidebar-link'>
                             <i data-feather="home" width="20"></i>
                             <span>Reportes</span>
                         </a>
