--- a/servidor/pagina/templates/cargar_usuario.html
+++ b/servidor/pagina/templates/cargar_usuario.html
@@ -29,7 +29,7 @@
                                 <div>
                                     <h6 class='text-bold'>New Order</h6>
                                     <p class='text-xs'>
-                                        An order made by Ahmad Saugi for product Samsung Galaxy S69
+
                                     </p>
                                 </div>
                             </li>
@@ -66,29 +66,27 @@
             </ul>
         </div>
     </nav>
-    <form action="{% url 'editclientes' cliente_actual %}" method="POST">
+    <form action="{% url 'editusuarios' usuario_actual %}" method="POST">
         {% csrf_token %}
         <div class="forma">
-            <label for="ingresar-nombre">Numero de cedula</label>
-            <input type="text" class="form-control" id="formGroupExampleInput1" name="codigo_cliente" value="{{datos_act.codigo_cliente}}">
+            <label for="ingresar-nombre">Nombre</label>
+            <input type="text" class="form-control" id="formGroupExampleInput1" name="nombre_usuario" value="{{datos_act.nombre_usuario}}">
   
 
             <label for="ingresar-nombre">Nombre completo</label>
-            <input type="text" class="form-control" id="formGroupExampleInput1" name="nombre_cliente" value="{{datos_act.nombre_cliente}}">
+            <input type="text" class="form-control" id="formGroupExampleInput1" name="nombre_completo_usuario" value="{{datos_act.nombre_completo_usuario}}">
 
 
-            <label for="ingresar-codigo">Número de telefono</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" name="telefono_cliente" value="{{datos_act.telefono_cliente}}">
+            <label for="ingresar-codigo">Contraseña</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" name="password_usuario" value="{{datos_act.password_usuario}}">
 
-            <label for="ingresar-precio-compra">Direccion</label>
-            <input type="text" class="form-control" id="formGroupExampleInput3" name="direccion_cliente" value="{{datos_act.direccion_cliente}}">
 
         </div>
         <footer>
             <div class="footer clearfix mb-0 text-muted">
                 
                     <button class="guardar-producto" type="submit">
-                        Guardar cliente
+                        Guardar nuevo usuario
                     </button>
 
             </div>
@@ -102,23 +100,17 @@
                         <thead>
                             <tr>
                                 <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                                    class="dataTable-sorter">Cedula</a></th>
+                                    class="dataTable-sorter">Nombre</a></th>
                                 <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                                        class="dataTable-sorter">Nombre</a></th>
-                                <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                                        class="dataTable-sorter">telefono</a></th>
-                                <th data-sortable="" style="width: 20.8988%;"><a href="#"
-                                        class="dataTable-sorter">direccion</a>
+                                        class="dataTable-sorter">Nombre completo</a></th>
                             </tr>
                         </thead>
 
-                        {%for lista in listaclientes%}
+                        {%for lista in listausuarios%}
                         <tr>
 
-                            <td>{{lista.codigo_cliente}}</td>
-                            <td>{{lista.nombre_cliente}}</td>
-                            <td>{{lista.telefono_cliente}}</td>
-                            <td>{{lista.direccion_cliente}}</td>
+                            <td>{{lista.nomre_usuario}}</td>
+                            <td>{{lista.nombre_completo_usuario}}</td>
 
                             <th data-sortable="" style="width:11.125%;"><a href="{%url 'editclientes' lista.codigo_cliente%}"
                                     class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
