--- a/servidor/pagina/templates/table-datatable.html
+++ b/servidor/pagina/templates/table-datatable.html
@@ -106,10 +106,14 @@
                                     <td>{{lista.precioventa_productos}}</td>
                                     <td>{{lista.categoria_productos}}</td>
                                     <td>{{lista.cantidad_productos}}
-                                        <th data-sortable="" style="width:11.125%;"><a href="{%url 'editproducto' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                                        <th data-sortable="" style="width:10.125%;"><a href="{%url 'editproducto' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                                             
-                                            Editar
+                                            Editar 
                                           </a></td>
+                                        <th data-sortable="" style="width:10.125%;"><a href="{%url 'borrar' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
+                                            
+                                            borrar
+                                        </a></td>
                                     </td>
                                     
                                 
