--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1551,3 +1551,23 @@ footer div{
   justify-content: center;
   align-items: center;
 }
+
+.clienteptex{
+  width: 10%;
+  display: inline;
+  min-height: calc(1.5em + 0.934rem + 2px);
+  padding: 0.467rem 0.6rem;
+  font-size: 0.855rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #555252;
+  background-color: white;
+  background-clip: padding-box;
+  border: 1px solid #DFE3E7;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+}
