--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1553,8 +1553,8 @@ footer div{
 }
 
 .clienteptex{
-  width: 10%;
-  display: inline;
+  width: auto;
+  display: flex;
   min-height: calc(1.5em + 0.934rem + 2px);
   padding: 0.467rem 0.6rem;
   font-size: 0.855rem;
@@ -1571,3 +1571,14 @@ footer div{
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
 }
+.busqueda{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 1em;
+
+}
+.clientept{
+ padding-left: 1em;
+}
+
